# project2_parshin_pavel_M25-555

./: .gitignore  README.md  demo.cast  pyproject.toml
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
src/primitive_db/data/: users.json
